# ao

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile.toml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/code-generator/: Cargo.toml
crates/code-generator/examples/: print_wat.rs
crates/code-generator/src/: lib.rs  template.wat
crates/parser/: Cargo.toml
crates/parser/src/: grammar.bnf  lib.rs  token.rs
crates/parser/src/snapshots/: parser__tests__block_returns_statements.snap  parser__tests__expression_return_comparison_expression_with_calculation.snap  parser__tests__expression_return_equal_expression.snap  parser__tests__expression_return_logical_and_expression.snap  parser__tests__expression_return_logical_not_expression.snap  parser__tests__expression_return_logical_or_expression.snap  parser__tests__expression_return_not_equal_expression.snap  parser__tests__expression_return_repeated_unary_expression.snap  parser__tests__expression_returns_assignment_expression.snap  parser__tests__expression_returns_binary_expression.snap  parser__tests__expression_returns_binary_expression_with_unary_minus.snap  parser__tests__expression_returns_complicated_binary_expression.snap  parser__tests__expression_returns_greater_than.snap  parser__tests__expression_returns_greater_than_or_equal.snap  parser__tests__expression_returns_identifier.snap  parser__tests__expression_returns_if_else_expression.snap  parser__tests__expression_returns_if_else_if_expression.snap  parser__tests__expression_returns_integer_literal.snap  parser__tests__expression_returns_less_than_expression.snap  parser__tests__expression_returns_less_than_or_equal_expression.snap  parser__tests__parse_bool_literal.snap  parser__tests__parse_returns_function_definition_with_parameters.snap  parser__tests__parse_returns_function_definition_without_parameters.snap  parser__tests__parse_returns_function_definitions.snap  parser__tests__parse_returns_function_when_comments.snap  (+6 more)
samples/: if.ao
src/: main.rs
(+43 files in other folders)
