[package]
name = "language"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
indoc = { workspace = true }

[dependencies]
parser = { workspace = true }
code-generator = { workspace = true }
clap = { version = "4.5.21", features = ["derive"] }

[workspace]
members = [
  "crates/ast",
  "crates/code-generator",
  "crates/parser",
  "crates/tools",
]

[workspace.dependencies]
anyhow = "1.0.94"
ast = { path = "crates/ast" }
code-generator = { path = "crates/code-generator" }
parser = { path = "crates/parser" }
pretty_assertions = "1.4.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.4"
indoc = "2.0.5"
insta = { version = "1.43.1", features = ["yaml"] }
wast = "235.0.0"
chumsky = "0.10.1"
logos = "0.15.0"
