[package]
name = "code-generator"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
indoc = { workspace = true }
parser = { workspace = true }
pretty_assertions = { workspace = true }
wasmtime = "=33.0.2"
wasmtime-wasi = "=33.0.1"

[dependencies]
anyhow = { workspace = true }
ast = { workspace = true }
parser = { workspace = true }
thiserror = { workspace = true }
type-checker = { workspace = true }
wast = { workspace = true }
