[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.5.1"
ast = { workspace = true }
chumsky = { workspace = true }
logos = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
pretty_assertions = { workspace = true }
insta = { workspace = true }
